# Tubes3_TheRecruiter

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: seeder.py
src/: __main__.py
src/app/: about_page.py  cv_summary_page.py  cv_viewer_page.py  main_menu.py  main_window.py  search_page.py  upload_page.py
src/app/pages/: about_page.ui  cv_summary_page.ui  cv_viewer_page.ui  main_menu_page.ui  search_page.ui  upload_page.ui
src/app/resources/: resources.qrc
src/core/: __init__.py  extractor.py
src/db/: init.sql  models.py  test.py  tubes3_seeding.sql
src/drivers/: __main__.py  boyer.py  fuzzy.py  gui.py  kmp_driver.py
src/search/: aho_corasick.py  boyer_moore.py  cv_grouper.py  fuzzysearch_protocol.py  kmp.py  levenshtein.py  multisearch_protocol.py  search_abc.py  search_workers.py  searcher.py
src/utils/: config.py  encrypt.py
